# DA-PROJ2

./: CMakeLists.txt  README.md  input.txt
data/: john.csv
docs/: docs.md
src/: input.txt  main.cpp  output.txt
src/algorithms/: backtracking.cpp  bruteforce.cpp  dynamicprog.cpp  greedy.cpp  ilp.cpp  parsing.cpp
src/headers/: backtracking.h  bruteforce.h  dynamicprog.h  greedy.h  ilp.h  menu.h  parsing.h  structs.h
src/other/: menu.cpp
src/structs/: structs.h
